--- Fixed bug where new step didn't show after choosing an alias type     --- Fixed syntax in educational material URL field placeholders     --- Fixed missing educational material section when adding an alias

--- a/templates/alias-add.html
+++ b/templates/alias-add.html
@@ -146,7 +146,7 @@
                   </div>
                 </div>
 								<!-- SECTION: Educational material -->
-                <div uib-accordion-group is-open="eduMatSection.open" class="panel-container summary-box animated" ng-class="{fadeInUp: eduMatSection.show}" is-disabled="!newAlias.eduMat" ng-if="eduMatSection.show">
+                <div uib-accordion-group is-open="educationalMaterialSection.open" class="panel-container summary-box animated" ng-class="{fadeInUp: educationalMaterialSection.show}" is-disabled="!newAlias.eduMat" ng-if="educationalMaterialSection.show">
                   <uib-accordion-heading>
                     <div class="row" style="align-items: center">
                       <div class="col-md-2">
@@ -156,7 +156,7 @@
                         <strong>Educational Material</strong>
                       </div>
                       <div class="col-md-2">
-                        <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': eduMatSection.open, 'glyphicon-chevron-right': !eduMatSection.open}" ng-if="newAlias.eduMat"></i>
+                        <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': educationalMaterialSection.open, 'glyphicon-chevron-right': !educationalMaterialSection.open}" ng-if="newAlias.eduMat"></i>
                       </div>
                     </div>
                   </uib-accordion-heading> 
@@ -448,7 +448,7 @@
                 </div>          
   						</div>
   						<!-- SECTION: Educational material -->
-              <div class="row animated" ng-class="{fadeInUp: eduMatSection.show}" ng-if="eduMatSection.show">
+              <div class="row animated" ng-class="{fadeInUp: educationalMaterialSection.show}" ng-if="educationalMaterialSection.show">
                 <div class="col-xs-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
@@ -458,7 +458,7 @@
                   </div>  
                 </div>
               </div>   
-              <div class="row animated" ng-class="{fadeInUp: eduMatSection.show}" ng-if="eduMatSection.show">
+              <div class="row animated" ng-class="{fadeInUp: educationalMaterialSection.show}" ng-if="educationalMaterialSection.show">
                 <div class="col-xs-12">
                   <p style="margin-bottom: 10px;">
                     <span><strong>Optional field:</strong></span>
@@ -466,7 +466,7 @@
                   </p>
                 </div>
               </div>  
-              <div class="row animated" ng-class="{fadeInUp: eduMatSection.show}" ng-if="eduMatSection.show"> 
+              <div class="row animated" ng-class="{fadeInUp: educationalMaterialSection.show}" ng-if="educationalMaterialSection.show"> 
                 <div class="col-xs-12 col-lg-8">
                   <div class="panel-container">
                     <div class="panel-info">
