--- a/templates/educational-material-add.html
+++ b/templates/educational-material-add.html
@@ -601,7 +601,7 @@
                           URL
                         </label>
                         <div class="col-xs-12 col-lg-10">
-                          <input class="form-control" type="text" ng-model="newEduMat.url_EN" ng-change="urlUpdate()" placeholder="English Title" required="required">
+                          <input class="form-control" type="text" ng-model="newEduMat.url_EN" ng-change="urlUpdate()" placeholder="English URL" required="required">
                         </div>
                       </div>
                     </div>
@@ -619,7 +619,7 @@
                           URL
                         </label>
                         <div class="col-xs-12 col-lg-10">
-                          <input class="form-control" type="text" ng-model="newEduMat.url_FR" ng-change="urlUpdate()" placeholder="Titre Français" required="required">
+                          <input class="form-control" type="text" ng-model="newEduMat.url_FR" ng-change="urlUpdate()" placeholder="URL Français" required="required">
                         </div>
                       </div>
                     </div>
